--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
     padding: 0;
  }
  body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'acma', "right didone";
  }
  .cabecalho {
-    background-color: #424E61;
+    background-color: #002a6d;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -25,7 +25,7 @@
     width: 25%;
  }
  .escola{
-    background-image: linear-gradient(#424E61,#16CFF8);
+    background-image: linear-gradient(#143770,#16CFF8);
     
     color:white;
     display: flex;
@@ -34,7 +34,7 @@
     padding: 24px 0;
  }
  .escola-div-conteudo{
-    width: 35%;
+    width: 40%;
  }
     
  .escola-titulo{
@@ -60,10 +60,10 @@
  }
  .estudante-todos{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 25% 25% 25% 25% 25%;
  }
  .rodape{
-    background-color: black;
+    background-color: rgba(33, 8, 145, 0.863);
     text-align: center;
  }
  .rodape-imagem{
