--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@
  }
  .estudante-todos{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 25% 25% 25% 25%;
  }
  .rodape{
-    background-color: rgba(33, 8, 145, 0.863);
+    background-color: rgba(35, 10, 150, 0.863);
     text-align: center;
  }
  .rodape-imagem{
